Optimized entity component class

--- a/editor/leveleditor.ui
+++ b/editor/leveleditor.ui
@@ -126,7 +126,7 @@
                <enum>Qt::LeftToRight</enum>
               </property>
               <property name="currentIndex">
-               <number>0</number>
+               <number>5</number>
               </property>
               <widget class="QWidget" name="tab">
                <property name="sizePolicy">
@@ -891,6 +891,20 @@
                 </item>
                </layout>
               </widget>
+              <widget class="QWidget" name="tab_10">
+               <attribute name="title">
+                <string>Sky</string>
+               </attribute>
+               <layout class="QGridLayout" name="gridLayout_9">
+                <item row="0" column="0">
+                 <widget class="QGroupBox" name="groupBox_12">
+                  <property name="title">
+                   <string>Sky Settings</string>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </widget>
              </widget>
             </item>
            </layout>
@@ -1101,8 +1115,8 @@ p, li { white-space: pre-wrap; }
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>302</width>
-                 <height>726</height>
+                 <width>300</width>
+                 <height>710</height>
                 </rect>
                </property>
                <property name="sizePolicy">
